force-app/main/default/objects/Supplier__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Lisbon</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Northville</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Rome</fullName>
            </value>
            <value>
                <fullName>Sao Paulo</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Vienna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>