force-app/main/default/objects/Supplier__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Sao_Paulo</fullName>
            </value>
            <value>
                <fullName>Asia/Kolkata</fullName>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>Europe/Amsterdam</fullName>
            </value>
            <value>
                <fullName>Europe/Berlin</fullName>
            </value>
            <value>
                <fullName>Europe/Lisbon</fullName>
            </value>
            <value>
                <fullName>Europe/London</fullName>
            </value>
            <value>
                <fullName>Europe/Madrid</fullName>
            </value>
            <value>
                <fullName>Europe/Paris</fullName>
            </value>
            <value>
                <fullName>Europe/Rome</fullName>
            </value>
            <value>
                <fullName>Europe/Vienna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>