force-app/main/default/objects/Supplier__c/fields/Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Waiting Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>