force-app/main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Waiting_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>